# Platypus

./: .air.toml  .dockerignore  .gitignore  .golangci.yml  .goreleaser.dev.yaml  .goreleaser.yaml  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  USAGE.md  Vagrantfile  config.docker.yml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  platypus.go  termite.go
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  codeql-analysis.yml  desktop.yaml  docker-admin.yaml  docker-agent.yaml  docker-frontend.yaml  docker-server.yaml  docker.yaml  go.yml  goreleaser.yaml  pre-commit.yaml  release.yml
assets/: config.example.yml
client/: client.go
cmd/: main.go
cmd/admin/: Dockerfile  main.go
cmd/agent/: Dockerfile  main.go
cmd/platypus/: main.go
cmd/platypus-admin/: main.go
cmd/platypus-agent/: main.go  main_baseline_test.go  main_bundle_test.go  stream_adapters.go
cmd/platypus-cli/: main.go  plugin_cli_test.go  plugin_keygen.go  plugin_new.go  plugin_new_caps.go  plugin_new_test.go  plugin_root.go  plugin_sign.go  plugin_validate_manifest.go  plugin_verify.go
cmd/platypus-server/: cert_helpers_test.go  dependencies_test.go  main.go  main_test.go  webui_wiring_test.go
cmd/server/: Dockerfile  config.example.dev.json  config.example.dev.yaml  config.example.prod.json  config.example.prod.yaml  main.go
cmd/termite/: main.go
config/: app.ini
deployments/: Dockerfile  docker-compose.yml
desktop/: .gitignore  README.md  go.mod  go.sum  main.go  wails.json
desktop/frontend/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
doc/: RESTful.md  RaaS.md  SDK.md
doc/zh/: mkdocs.yml  requirements.txt
docs/: Design.md  RaaS.md  docs.go  frontend-ia-redesign.md  swagger.json  swagger.yaml
docs/demos/: 01-onboarding.webm  02-server-rail.webm  03-fleet-views.webm  04-terminal-persistence.webm  05-command-palette.webm  06-auth-redesign.webm  07-marketplace.webm  README.md
docs/platypus/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml
docs/plugins/: AUTHORS.md  CONFIG_AUTHORING.md  CROSS_PLATFORM.md  GO_PLUGINS.md  SECURITY.md  STREAMING_ABI.md  USERS.md
docs/screenshots/: README.md
e2e/: .gitignore  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  pnpm-lock.yaml
e2e/fixtures/: agent.ts  api.ts  auth.ts  demo.ts  env.ts  test.ts
e2e/scripts/: build-demos.ts  build-gallery.ts
e2e/specs/: 00-bootstrap-flow.spec.ts  01-auth.spec.ts  02-project-shell.spec.ts  03-overview.spec.ts  04-listeners.spec.ts  05-hosts.spec.ts  06-sessions.spec.ts  07-dispatch-members.spec.ts  08-admin-users.spec.ts  09-projects-multi.spec.ts  10-host-view.spec.ts  11-host-terminal.spec.ts  12-host-files.spec.ts  13-host-tunnels.spec.ts  14-dispatch-live.spec.ts  15-multi-agent.spec.ts  16-empty-project.spec.ts  17-mesh-topology.spec.ts  18-activity-audit.spec.ts  19-mesh-discovery.spec.ts  20-onboarding.spec.ts  21-server-rail.spec.ts  22-recording-playback.spec.ts  30-marketplace.spec.ts  30-toggle-active-contrast.spec.ts  31-stale-listeners-dispatch-copy.spec.ts  32-graph-empty-state-copy.spec.ts  33-onboarding-probe-error.spec.ts  34-toast-statusbar-overlap.spec.ts  35-rail-context-menu-no-native-dialogs.spec.ts  36-overview-kpi-grid.spec.ts  37-rail-active-indicator-visible.spec.ts  38-settings-single-tab.spec.ts  38-sidebar-only-on-project.spec.ts  39-members-empty-state-explains-admin.spec.ts  40-files-chrome-contract.spec.ts  40-files-toolbar-disabled.spec.ts  41-onboarding-url-placeholder.spec.ts  42-sessions-no-listener-copy.spec.ts  43-enrollment-pat-expanded.spec.ts  (+15 more)
example/plugins/sys-file-archive/: Cargo.toml
example/plugins/sys-file-archive/src/: lib.rs
example/plugins/sys-file-read/: Cargo.toml  plugin.yaml
example/plugins/sys-file-scan/: Cargo.toml  README.md
example/plugins/sys-file-scan/src/: lib.rs
example/plugins/sys-fs-write/: Cargo.toml
example/plugins/sys-fs-write/src/: lib.rs
example/plugins/system/sys-config-audit/: Cargo.toml
example/plugins/system/sys-config-audit/src/: lib.rs  rules.rs
example/plugins/system/sys-file-write/: Cargo.toml
example/plugins/system/sys-file-write/src/: lib.rs
example/plugins/system/sys-files-read/: Cargo.toml  plugin.yaml
example/plugins/system/sys-files-read/src/: lib.rs
example/plugins/system/sys-files-write/: Cargo.toml
example/plugins/system/sys-files-write/src/: lib.rs
example/plugins/system/sys-journald-linux/: Cargo.toml
example/plugins/system/sys-journald-linux/src/: lib.rs
example/plugins/system/sys-listdir/: Cargo.toml
example/plugins/system/sys-listdir/src/: lib.rs
example/plugins/system/sys-process/: Cargo.toml  plugin.yaml
example/plugins/system/sys-process/src/: lib.rs
example/plugins/system/sys-procs/: Cargo.toml  plugin.yaml
example/plugins/system/sys-procs/src/: lib.rs
example/plugins/system/sys-security/: Cargo.toml  plugin.yaml
example/plugins/system/sys-security/src/: lib.rs
example/plugins/system/sys-tunnel-pull/: Cargo.toml  plugin.yaml
example/plugins/system/sys-tunnel-pull/src/: lib.rs
examples/plugins/echo/: Cargo.toml  README.md
examples/plugins/echo/src/: lib.rs
examples/plugins/system/sys-config-audit/: Cargo.toml  plugin.yaml
examples/plugins/system/sys-tasks-windows/: Cargo.toml
hack/resign_system_plugins/: main.go
hack/stage_releases/: main.go
hack/stage_system_plugins/: main.go
html/: package-lock.json
html/frontend/: craco.config.js  package.json
html/ttyd/: package.json
init/: platypus.service
internal/activity/: activity.go  activity_test.go  reaper.go
internal/admin/: client.go
internal/agent/: agent.go  baseline.go  baseline_test.go  bootstrap.go  bootstrap_v2.go  (+65 more)
runtime/: app.ini
scripts/: dev-publish-entrypoint.sh  dev-publish-marketplace-index.py  fetch-ip2region.sh  release-publish.sh  spa-serve.py
tools/: setup.go
(+2040 files in other folders)
