[package]
name = "sys-procs"
version = "2.0.0"
edition = "2021"
publish = false

[lib]
name = "sys_procs"
# cdylib for the wasm32 build (production); rlib so `cargo test` on
# the host compiles the pure /proc parsers + their #[cfg(test)] blocks.
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
