[package]
name = "sys-config-audit"
version = "3.0.0"
edition = "2021"
publish = false

[lib]
name = "sys_config_audit"
# cdylib for the wasm32 build (production); rlib so `cargo test` on
# the host compiles the pure scanners + their #[cfg(test)] blocks.
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# regex powers the gitleaks-style rule pack in src/rules.rs. We
# enable the `unicode-perl` feature so `\b`, `\d`, `\w` work as
# expected (gitleaks-shaped patterns rely on them); the rest of the
# unicode features (case folding, script tables, …) stay off so the
# wasm artefact stays close to the original size. perf-* covers DFA
# and Aho-Corasick fast paths.
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
